--- a/web/.env
+++ b/web/.env
@@ -1,3 +1,3 @@
-# VITE_API_BASE_URL=http://localhost:8100/v1
-VITE_API_BASE_URL=http://payapi.cheemshappy.com/v1
+VITE_API_BASE_URL=http://localhost:8100/v1
+# VITE_API_BASE_URL=http://payapi.cheemshappy.com/v1
 VITE_ROUTER_MODE=hash
