--- a/config/demo.yml
+++ b/config/demo.yml
@@ -4,16 +4,16 @@ http:
   port: 8100
 security:
   api_sign:
-    app_key: cheemshappy_pay
-    app_security: cheemshappy_pay888
+    app_key: your_app_key
+    app_security: your_app_secret
   jwt:
-    key: 1QQ123TSEcr12389fw8prOaObmrch8
+    key: your_jwt_secret_key
 data:
   mysql:
-    user: root:xxxx@tcp(xxxxx:7002)/cheemshappypay?charset=utf8mb4&parseTime=True&loc=Local
+    user: root:your_db_password@tcp(your_db_host:3306)/your_database?charset=utf8mb4&parseTime=True&loc=Local
   redis:
-    addr: xxxxx:6000
-    password: "xxxx"
+    addr: your_redis_host:6379
+    password: "your_redis_password"
     db: 0
     read_timeout: 0.2s
     write_timeout: 0.2s
@@ -26,3 +26,21 @@ log:
   max_age: 7
   max_size: 1024
   compress: true
+
+rpc_endpoints:
+  # EVM主网
+  "1": "https://mainnet.infura.io/v3/YOUR_INFURA_KEY"
+  "56": "https://bsc-dataseed.binance.org/"
+  "137": "https://polygon-rpc.com"
+
+  # 测试网
+  "5": "https://goerli.infura.io/v3/YOUR_INFURA_KEY"
+  "97": "https://data-seed-prebsc-1-s1.binance.org:8545"
+
+  # Tron
+  "TRX": "grpc.trongrid.io:50051"
+  "nile": "grpc.nile.trongrid.io:50051"
+
+  # Solana
+  "SOL": "https://api.mainnet-beta.solana.com"
+  "SOLT": "https://api.testnet.solana.com"
